facet-args/tests/snapshots/err__error_char_with_multiple_chars.snap
---
source: facet-args/tests/err.rs
expression: "$crate :: common :: DiagnosticDisplayWrapper(& err).to_string()"
---
args::reflect_error

  × Could not parse CLI arguments
   ╭────
 1 │ --letter abc 
   ·          ─┬─
   ·           ╰── invalid value for `char`
   ╰────
