facet-args/tests/snapshots/err__error_invalid_ip_address.snap
---
source: facet-args/tests/err.rs
expression: "$crate :: common :: DiagnosticDisplayWrapper(& err).to_string()"
---
args::reflect_error

  × Could not parse CLI arguments
   ╭────
 1 │ --address not-an-ip 
   ·           ────┬────
   ·               ╰── invalid value for `IpAddr`
   ╰────
