facet-args/tests/snapshots/err__error_missing_value_for_argument_short_missed.snap
---
source: facet-args/tests/err.rs
expression: "$crate :: common :: DiagnosticDisplayWrapper(& err).to_string()"
---
args::reflect_error

  × Could not parse CLI arguments
   ╭────
 1 │ -j -v 
   ·    ─┬
   ·     ╰── invalid value for `usize`
   ╰────
