facet-args/tests/snapshots/err__error_negative_value_for_unsigned.snap
---
source: facet-args/tests/err.rs
expression: err
---
[31mError:[0m 
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m args:1:8 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m-[0m[38;5;249m-[0m[38;5;249mc[0m[38;5;249mo[0m[38;5;249mu[0m[38;5;249mn[0m[38;5;249mt[0m[31m [0m[38;5;249m-[0m[38;5;249m1[0m[38;5;249m0[0m
 [38;5;240m  │[0m        [31m┬[0m  
 [38;5;240m  │[0m        [31m╰[0m[31m─[0m[31m─[0m Missing [31margument value[39m for [33m--count[39m
[38;5;246m───╯[0m
