facet-args/tests/snapshots/err__error_nested_struct_with_scalar.snap
---
source: tests/err.rs
expression: err
---
[31mError:[0m 
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m <unknown>:1:10 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m-[0m[38;5;249m-[0m[38;5;249mc[0m[38;5;249mo[0m[38;5;249mn[0m[38;5;249mf[0m[38;5;249mi[0m[38;5;249mg[0m[38;5;249m [0m[31ms[0m[31mi[0m[31mm[0m[31mp[0m[31ml[0m[31me[0m
 [38;5;240m  │[0m          [31m─[0m[31m─[0m[31m─[0m[31m┬[0m[31m─[0m[31m─[0m  
 [38;5;240m  │[0m             [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m Wrong shape: expected Config, but got String
[38;5;246m───╯[0m
