facet-args/tests/snapshots/err__error_number_outside_range.snap
---
source: facet-args/tests/err.rs
expression: "$crate :: common :: DiagnosticDisplayWrapper(& err).to_string()"
---
args::reflect_error

  × Could not parse CLI arguments
   ╭────
 1 │ --small 1000 
   ·         ──┬─
   ·           ╰── invalid value for `u8`
   ╰────
